--- a/src/Mvc/MvcTemplates/N2/Resources/Css/n2.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/n2.css
@@ -36,10 +36,10 @@ a { text-decoration: none; color: #000; }
 
 #page-tree { position: absolute; left:0; right:1px; top: 0; bottom: 0; overflow: auto; margin-top:33px;}
 	#page-tree ul { list-style-type:none; padding:0; margin:0; }
-		#page-tree li { margin-left: 10px; text-indent: 5px; line-height: 28px; }
+		#page-tree li.node { margin-left: 10px; text-indent: 5px; line-height: 28px; }
 			#page-tree li div.item { position:relative; white-space:nowrap; text-overflow: ellipsis; }
-			#page-tree li div.item a.item { min-width: 60%; max-width:80%; overflow:hidden; padding-right:20px; }
-				#page-tree li div.item a.item .page-icon { display: inline-block; width: 16px; height: 16px; vertical-align: text-bottom; background: transparent none no-repeat 0 0; }
+			#page-tree li div.item a.link { min-width: 60%; max-width:80%; overflow:hidden; padding-right:20px; }
+				#page-tree li div.item a.link .page-icon { display: inline-block; width: 16px; height: 16px; vertical-align: text-bottom; background: transparent none no-repeat 0 0; }
 				
 				#page-tree li div.item .tools { position:absolute; right:20px; top: 0; }
 					#page-tree li div.item		 .tools .dropdown-toggle { opacity:0; color:#666; transition: opacity .5s ease-in-out; text-decoration:none; }
